INCLUDES = -I../lib/src/ -Wall
bin_PROGRAMS = garage-inc
garage_inc_SOURCES =             \
main_window.c   main_window.h   \
warehouse_window.c   warehouse_window.h   \
warehouseadd_window.c   warehouseadd_window.h   \
warehouseremove_window.c   warehouseremove_window.h   \
warehouseinvoice_window.c   warehouseinvoice_window.h   \
workshop_window.c   workshop_window.h   \
main_ui.c	main_ui.h	

garage_inc_LDADD   = -L../lib/src/ -lSDLTk -lSDL -lSDL_image -lfftw3 -lvrb 

