

noinst_LIBRARIES = libSDLTk.a

AM_CPPFLAGS = -Wall

libSDLTk_a_SOURCES = \
 SDL_Stack.c        SDL_Stack.h       \
 SDL_Widget.c       SDL_Widget.h      \
 SDL_WidTool.c      SDL_WidTool.h     \
 SDL_Table.c        SDL_Table.h       \
 SDL_Tab.c          SDL_Tab.h         \
 SDL_Button.c       SDL_Button.h      \
 SDL_Slider.c       SDL_Slider.h      \
 SDL_Label.c        SDL_Label.h       \
 SDL_Edit.c         SDL_Edit.h        \
 SDL_Panel.c        SDL_Panel.h       \
 SDL_VolumeBar.c    SDL_VolumeBar.h   \
 SDL_ProgressBar.c  SDL_ProgressBar.h \
                                      \
 SDL_Font.c         SDL_Font.h        \
 SDL_FontFNT.c      SDL_FontFNT.h     \
 SDL_FontBDF.c      SDL_FontBDF.h     

libSDLTk_a_LIBADD   = 
